fixed the 5px gap, break css hover

--- a/scss/style/blocks/menu-main.scss
+++ b/scss/style/blocks/menu-main.scss
@@ -65,9 +65,9 @@
 
   display: none;
   padding: 0.5rem 1.5rem 2rem;
-  margin-top: 5px;
 
   background-color: white;
+  border-top: 5px solid $color-blue;
   border-bottom: 5px solid $color-blue;
 
   h3 {
